--- a/03/Estef/style.css
+++ b/03/Estef/style.css
@@ -1,27 +1,38 @@
-.contact_form h2 {
-    background: none repeat scroll 0 0 #F3F3F3;
+body {
+    background: url("iPad-mini-black.jpg") no-repeat scroll center top transparent;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+#container {
+    margin: 0 auto;
+    width: 580px;
+}
+
+#container > header {
+    font-family: trebuchet ms;
+    margin: 130px 0 20px;
+    text-align: center;
+}
+
+section h2 {
+    background: #F3F3F3;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
     color: #5CD053;
     display: block;
     font-family: sans-serif;
     font-size: 20px;
-    padding: 5px;
-    text-shadow: 1px 1px 1px #CCCCCC;
-    width: 433px;
+    text-align: center;
+    text-shadow: 1px 1px 1px #FFFFFF;
 }
-/*--- estilos para los ul y li del formulario ---*/
-.contact_form ul {
-    width:750px;
-    list-style-type:none;
-	margin:0px;
-	padding:0px;
+
+#mi_formulario {
+    padding: 5px 20px;
+    text-align: center;
 }
-.contact_form li{
-	padding:12px; 
-	border-bottom:1px solid #eee;
-	position:relative;
-} 
-.contact_form label {
+
+#mi_formulario label {
     color: #555555;
     display: inline-block;
     float: left;
@@ -32,73 +43,95 @@
     padding: 3px;
     width: 90px;
 }
-.contact_form input {
+#mi_formulario input {
 	height:20px; 
 	width:220px; 
 	padding:5px 8px;
 }
-.contact_form textarea {
-	padding:8px; 
-	width:300px;
-}
-.contact_form button {
-	margin-left:90px;
-}
+#mi_formulario textarea {padding:8px;}
 
-/*----- estilos visuales de los elementos --------*/
-
-.contact_form input, .contact_form textarea { 
+#mi_formulario input, #mi_formulario textarea { 
 	border:1px solid #aaa;
 	box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
+	-webkit-box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
 	border-radius:2px;
 	color: #888;
 	font-size: 12px;
-	padding-right:30px;
 	-moz-transition: padding .25s; 
 	-webkit-transition: padding .25s; 
 	-o-transition: padding .25s;
 	transition: padding .25s;
 }
-.contact_form input:focus, .contact_form textarea:focus {
+#mi_formulario input { 
+	padding-right:30px;
+}
+#mi_formulario input:focus, #mi_formulario textarea:focus {
 	background: #fff; 
 	border:1px solid #555; 
 	box-shadow: 0 0 3px #aaa; 
-	padding-right:80px;
+	-webkit-box-shadow: 0 0 3px #aaa; 
+}
+#mi_formulario input:focus {
+	padding-right: 88px;
+}
+#mi_formulario textarea:focus {
+    border: 1px solid #AAAAAA;
+    box-shadow: 0 0 5px skyblue;
 }
 
-/* === Estilos de Validacion === */	
 
-.contact_form input:required:valid, .contact_form textarea:required:valid {
+/* Validación */	
+
+#mi_formulario input:required:valid, #mi_formulario textarea:required:valid {
 	box-shadow: 0 0 5px #5cd053;
+	-webkit-box-shadow: 0 0 5px #5cd053;
 	border-color: #28921f;
 }
-.contact_form input:focus:invalid, .contact_form textarea:focus:invalid {
+#mi_formulario input:focus:invalid, #mi_formulario textarea:focus:invalid {
 	box-shadow: 0 0 5px #d45252;
+	-webkit-box-shadow: 0 0 5px #d45252;
 	border-color: #b03535
 }
 
-/* === Estilos del boton de Envio === */
+#mi_formulario .star {
+    color: #B5393B;
+}
+
+
+/* Botón Enviar */
 button.submit {
-    padding: 9px 17px;
-   font-family: Helvetica, Arial, sans-serif;
-   font-weight: bold;
-   line-height: 1;
-   color: #444;
-   border: none;
-   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.85);
-   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#bbb));
-   background-image: -moz-linear-gradient(0% 100% 90deg, #BBBBBB, #FFFFFF);
-   background-color: #fff;
-   border: 1px solid #f1f1f1;
-   border-radius: 10px;
-   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+	background: rgb(230,240,163); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(230,240,163,1) 0%, rgba(210,230,56,1) 50%, rgba(195,216,37,1) 51%, rgba(219,240,67,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(230,240,163,1)), color-stop(50%,rgba(210,230,56,1)), color-stop(51%,rgba(195,216,37,1)), color-stop(100%,rgba(219,240,67,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(230,240,163,1) 0%,rgba(210,230,56,1) 50%,rgba(195,216,37,1) 51%,rgba(219,240,67,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(230,240,163,1) 0%,rgba(210,230,56,1) 50%,rgba(195,216,37,1) 51%,rgba(219,240,67,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(230,240,163,1) 0%,rgba(210,230,56,1) 50%,rgba(195,216,37,1) 51%,rgba(219,240,67,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(230,240,163,1) 0%,rgba(210,230,56,1) 50%,rgba(195,216,37,1) 51%,rgba(219,240,67,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', endColorstr='#dbf043',GradientType=0 ); /* IE6-9 */
+    border: 1px solid #F1F1F1;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    color: #222222;
+    font-family: Helvetica,Arial,sans-serif;
+    font-weight: bold;
+    line-height: 1;
+    padding: 15px 0;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.85);
+    width: 90%;
 }
 button.submit:hover {
-	opacity:.55;
+	background: rgb(157,213,58); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(157,213,58,1) 0%, rgba(161,213,79,1) 50%, rgba(128,194,23,1) 51%, rgba(124,188,10,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(157,213,58,1)), color-stop(50%,rgba(161,213,79,1)), color-stop(51%,rgba(128,194,23,1)), color-stop(100%,rgba(124,188,10,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(157,213,58,1) 0%,rgba(161,213,79,1) 50%,rgba(128,194,23,1) 51%,rgba(124,188,10,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(157,213,58,1) 0%,rgba(161,213,79,1) 50%,rgba(128,194,23,1) 51%,rgba(124,188,10,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(157,213,58,1) 0%,rgba(161,213,79,1) 50%,rgba(128,194,23,1) 51%,rgba(124,188,10,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(157,213,58,1) 0%,rgba(161,213,79,1) 50%,rgba(128,194,23,1) 51%,rgba(124,188,10,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9dd53a', endColorstr='#7cbc0a',GradientType=0 ); /* IE6-9 */
 	cursor: pointer; 
-	color: #fff;
 }
 button.submit:active {
 	border: 1px solid #222;
 	box-shadow: 0 0 10px 5px #444 inset; 
+	-webkit-box-shadow: 0 0 10px 5px #444 inset; 
 }
