--- a/03/Lau/styles.css
+++ b/03/Lau/styles.css
@@ -5,121 +5,106 @@
 }
 /*-----ESTILOS FORMULARIO---*/
 
-#miformulario{
-	 border: 1px #999999;
-	 border-radius: 0 25px 0 25px;
-	 box-shadow:0px 0px 25px white;
-	-moz-box-shadow:0px 0px 25px white;
-	-webkit-box-shadow:0px 0px 25px white;
-	background: rgba(229,222,222,1);
-   float: left;
-    margin: 10px;
-    padding: 15px;
-    width: 65%;
+body, div, h1, form, fieldset, input, textarea {
+	margin: 0; padding: 0; border: 0; outline: none;
 }
 
-fieldset{
-	 border: 1px solid rgb(153, 153, 153);
-	 border-radius: 0 25px 0 25px;
-	 padding:10px;
-	 margin:10px;
-	 }
-
-legend{
-	 color: #666666;
-    font-size: 1.2em;
-    margin: 10px 5px;
-    text-shadow: 1px 2px 2px #FFFFFF;
-    text-transform: uppercase;
+html {
+	height: 100%;
 }
 
-label{
-	color:#333;
-	text-shadow:1px 1px 0 #fff;
-	display:block;
+body {
+	background: #728eaa;
+	background: -moz-linear-gradient(top, #25303C 0%, #728EAA 100%); /* firefox */	
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#25303C), color-stop(100%,#728EAA)); /* webkit */
+	font-family: sans-serif; 
+}
+
+#miformulario {
+	display:none;
+	width: 500px;
+	margin: 60px auto;
+	padding: 60px 30px;
+	background: #c9d0de; border: 1px solid #e1e1e1;
+	-moz-box-shadow: 0px 0px 8px #444;
+	-webkit-box-shadow: 0px 0px 8px #444;
+}
+
+h1 {
+	font-size: 35px; color: #445668; text-transform: uppercase;
+	text-align: center; margin: 0 0 35px 0; text-shadow: 0px 1px 0px #f2f2f2;
+}
+
+label {
+	float: left;
+	clear: left;
+	margin: 11px 20px 0 0;
+	width: 120px;
+	text-align: right;
+	font-size: 16px;
+	color: #445668; 
+	text-transform: uppercase;
+	text-shadow: 0px 1px 0px #f2f2f2;
+}
+
+input {
+	width: 310px;
+	height: 35px;
+	padding: 5px 20px 0px 20px;
+	margin: 0 0 20px 0; 
+	background: #5E768D;
+	background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D)); /* webkit */
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 1px 0px #f2f2f2;
+	-webkit-box-shadow: 0px 1px 0px #f2f2f2;
+	font-family: sans-serif;
+	font-size: 16px;
+	color: #f2f2f2;
+	text-transform: uppercase;
+	text-shadow: 0px -1px 0px #334f71; 
+}
+	input::-webkit-input-placeholder  {
+    	color: #a1b2c3; text-shadow: 0px -1px 0px #38506b;  
 	}
-
-#datos-personales label{
-	display:inline-block;
-	float:left;
-	line-height:40px;
-	width:20%;
-	}
-
-
-
-	
-#miformulario #datos-personales input{
-	border-radius: 5px 5px;
-	display:block;
-	width:40%;
-	height:30px;
+	input:-moz-placeholder {
+	    color: #a1b2c3; text-shadow: 0px -1px 0px #38506b; 
 	}
 	
-	
-	
-#miformulario input[type="checkbox"]{
-	border-radius: 5px 5px;
-	height:18px;
-	width:5%;
+#comentarios{
+	height:200px;
 	}	
-	
 
-input:focus {
-	box-shadow:0px 0px 10px black;
-	-moz-box-shadow:0px 0px 10px black;
-	-webkit-box-shadow:0px 0px 10px black;
-	transition: background 1s, box-shadow 1s;
-	-moz-transition: background 1s, box-shadow 1s;
-	-webkit-transition: background 1s, box-shadow 1s;
-	-o-transition: background 1s, box-shadow 1s;
-	}		
-	
-input[type="submit"]{
-	background: rgb(197,197,229);
-background: -moz-linear-gradient(top,  rgba(197,197,229,1) 0%, rgba(137,137,186,1) 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(197,197,229,1)), color-stop(100%,rgba(137,137,186,1)));
-background: -webkit-linear-gradient(top,  rgba(197,197,229,1) 0%,rgba(137,137,186,1) 100%);
-background: -o-linear-gradient(top,  rgba(197,197,229,1) 0%,rgba(137,137,186,1) 100%);
-background: -ms-linear-gradient(top,  rgba(197,197,229,1) 0%,rgba(137,137,186,1) 100%);
-background: linear-gradient(to bottom,  rgba(197,197,229,1) 0%,rgba(137,137,186,1) 100%);
-
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5c5e5', endColorstr='#8989ba',GradientType=0 );
-
-
-  font-size: 19px;
-  border-radius:5px 5px;
-    height: 35px;
-    text-shadow: 1px 1px 1px #CCCCCC;
-    text-transform: uppercase;
-	margin-left:190px;
-    width: 200px;
-
+textarea {
+	width: 260px; height: 170px; padding: 12px 20px 0px 20px; margin: 0 0 20px 0; 
+	background: #5E768D;
+	background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D)); /* webkit */
+	border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 1px 0px #f2f2f2;-webkit-box-shadow: 0px 1px 0px #f2f2f2;
+	font-family: sans-serif; font-size: 16px; color: #f2f2f2; text-transform: uppercase; text-shadow: 0px -1px 0px #334f71; 
+}
+	textarea::-webkit-input-placeholder  {
+    	color: #a1b2c3; text-shadow: 0px -1px 0px #38506b;  
+	}
+	textarea:-moz-placeholder {
+	    color: #a1b2c3; text-shadow: 0px -1px 0px #38506b; 
 	}
 	
-input[type="submit"]:hover{
-	color:#333;
-	background: rgb(137,137,186);
-background: -moz-linear-gradient(top,  rgba(137,137,186,1) 0%, rgba(197,197,229,1) 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(137,137,186,1)), color-stop(100%,rgba(197,197,229,1)));
-background: -webkit-linear-gradient(top,  rgba(137,137,186,1) 0%,rgba(197,197,229,1) 100%);
-background: -o-linear-gradient(top,  rgba(137,137,186,1) 0%,rgba(197,197,229,1) 100%);
-background: -ms-linear-gradient(top,  rgba(137,137,186,1) 0%,rgba(197,197,229,1) 100%);
-background: linear-gradient(to bottom,  rgba(137,137,186,1) 0%,rgba(197,197,229,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8989ba', endColorstr='#c5c5e5',GradientType=0 );
-	box-shadow:0px 0px 10px black;
-	-moz-box-shadow:0px 0px 10px black;
-	-webkit-box-shadow:0px 0px 10px black;
-	transition: background 1s, box-shadow 1s;
-	-moz-transition: background 1s, box-shadow 1s;
-	-webkit-transition: background 1s, box-shadow 1s;
-	-o-transition: background 1s, box-shadow 1s;
-    -moz-transform: scale(1.1,1.1);
-	-webkit-transform: scale(1.1,1.1);
-	-o-transform: scale(1.1,1.1);
-    transform:scale(1.1,1.1);	
-	-moz-transition: background 1s, opacity 1s, box-shadow 1s, -moz-transform 1s;
-	-webkit-transition: background 1s, opacity 1s, box-shadow 1s, -webkit-transform 1s;
-	-o-transition: background 1s, opacity 1s, box-shadow 1s, -o-transform 1s;
-	transition: background 1s, opacity 1s, box-shadow 1s, transform 1s;
-	}
+input:focus, textarea:focus {
+	background: #728eaa;
+	background: -moz-linear-gradient(top, #668099 0%, #728eaa 20%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#668099), color-stop(20%,#728eaa)); /* webkit */
+	
+}
+
+input[type=submit] {
+	width: 185px; height: 52px; float: right; padding: 10px 15px; margin: 0 15px 0 0;
+	-moz-box-shadow: 0px 0px 5px #999;-webkit-box-shadow: 0px 0px 5px #999;
+	border: 1px solid #556f8c;
+	background: -moz-linear-gradient(top, #718DA9 0%, #415D79 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#718DA9), color-stop(100%,#415D79)); /* webkit */
+	cursor: pointer;
+}
