--- a/04/Jesus_Marcos/style.css
+++ b/04/Jesus_Marcos/style.css
@@ -1,37 +1,63 @@
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,900);
+
+
 /* Globales */
-*, html {font-family: Verdana, Arial, Helvetica, sans-serif;}
+*, html {font-family: 'Merriweather', serif;}
 
-body {background: url('yeswecan-league.jpg') no-repeat right bottom;}
+h2 {
+    color: #999999;
+    font-size: 14px;
+    margin: 0 !important;
+    text-align: center;
+}
+h1 {
+    background: none repeat scroll 0 0 rgb(252, 252, 181);
+	background: none repeat scroll 0 0 rgba(252, 252, 181, 0.9);
+    border: 1px solid #E8E89B;
+    border-radius: 37px 37px 37px 37px;
+    color: #871183;
+    display: block;
+    font-size: 42px;
+    margin: 40px auto 12px;
+    padding: 9px;
+    text-align: center;
+	text-shadow: 1px 1px #FFFFFF, 2px 2px 3px #F2AEEE, 2px 2px 2px #F2AEEE;
+    width: 410px;
+}
 
-h2 {font-size: 14px;}
-
-img {border: none;}
-
-#yeswecan-signup {
-    margin: 20px auto;
-    width: 500px;
+#formOne , .respuesta{
+    background: url("bg-form.png") no-repeat scroll 0 0 transparent;
+    height: 610px;
+    margin: 0 auto;
+    padding-top: 60px;
+    width: 610px;
 }
 
 fieldset {
-    margin: 20px 0 20px;
+    border: 0 none !important;
+    margin: 0;
     padding: 20px;
 }
 
-ol {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+ul {
+    display: block;
+    margin: 0 auto;
+    width: 400px;
 }
 
 li {
-    margin: 0 0 12px;
+    list-style: none outside none;
+    margin: 0 0 22px;
     position: relative;
 }
-
 label {
-    width: 150px;
+    color: #871183;
     display: inline-block;
+    font-size: 22px;
+    font-weight: 700;
+    text-shadow: 1px 1px #F9FCBA;
     vertical-align: top;
+    width: 150px;
 }
 
 fieldset input,
@@ -42,15 +68,19 @@ fieldset select {
     padding: 10px 20px 5px 10px;
 }
 
-input:focus:required:invalid {
-    border: 2px solid red;
-    background: url('ico_validation.png') 335px 8px no-repeat;
-}
+input[type="text"] {}
 
-input:required:valid {
-    background: url('ico_validation.png') 335px -56px no-repeat;
+.error {
+    background: none repeat scroll 0 0 rgba(250, 250, 250, 0.8);
+    border: 1px solid #CCCCCC;
+    margin: 0;
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    text-align: left;
+    top: 0;
+	color: #555555;
 }
-
 
 textarea {
     resize: none;
@@ -58,9 +88,71 @@ textarea {
 }
 
 input[type="submit"] {
-    height: 50px;
-    width: 500px;
-    font-size:20px;
+
+    border: 0 none;
+    border-radius: 7px 7px 7px 7px;
+    box-shadow: 0 2px 6px #222222, 0 0 0 2px #FEB6B6 inset;
+    color: #FFFFFF;
     cursor: pointer;
+    display: block;
+    font-size: 20px;
+    font-weight: 900;
+    height: 50px;
+    margin: 40px auto 0;
+    text-shadow: 0 0 4px #000000;
+    width: 250px;
+	
+background: rgb(254,187,187); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(254,187,187,1) 0%, rgba(254,144,144,1) 45%, rgba(255,92,92,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,187,187,1)), color-stop(45%,rgba(254,144,144,1)), color-stop(100%,rgba(255,92,92,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(254,187,187,1) 0%,rgba(254,144,144,1) 45%,rgba(255,92,92,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(254,187,187,1) 0%,rgba(254,144,144,1) 45%,rgba(255,92,92,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(254,187,187,1) 0%,rgba(254,144,144,1) 45%,rgba(255,92,92,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(254,187,187,1) 0%,rgba(254,144,144,1) 45%,rgba(255,92,92,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=0 ); /* IE6-9 */
+
 }
 
+input[type="submit"]:hover {
+
+background: rgb(255,92,92); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(255,92,92,1) 0%, rgba(254,144,144,1) 55%, rgba(254,187,187,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,92,92,1)), color-stop(55%,rgba(254,144,144,1)), color-stop(100%,rgba(254,187,187,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(255,92,92,1) 0%,rgba(254,144,144,1) 55%,rgba(254,187,187,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(255,92,92,1) 0%,rgba(254,144,144,1) 55%,rgba(254,187,187,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(255,92,92,1) 0%,rgba(254,144,144,1) 55%,rgba(254,187,187,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(255,92,92,1) 0%,rgba(254,144,144,1) 55%,rgba(254,187,187,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5c5c', endColorstr='#febbbb',GradientType=0 ); /* IE6-9 */
+
+box-shadow: 0 0px 3px #222222, 0 0 0 2px #FEB6B6 inset;
+}
+
+
+.listRespuesta {
+    margin-top: 50px;
+    padding: 0 80px 0 0;
+}
+.listRespuesta li {
+    color: #5D9B95;
+    display: inline-block;
+    font-size: 26px;
+    font-weight: 300;
+    text-align: right;
+    vertical-align: top;
+    width: 100%;
+}
+.listRespuesta li span {
+    color: #871183;
+    display: inline-block;
+    font-weight: 700;
+    margin-left: 11px;
+    text-align: left;
+    text-shadow: 1px 1px #F9FCBA;
+    vertical-align: top;
+    width: 150px;
+}
+.labase{
+    color: #666666;
+    margin-top: 80px;
+    text-align: center;
+}
