--- a/04/Jsdiez/styles/styles.css
+++ b/04/Jsdiez/styles/styles.css
@@ -39,7 +39,7 @@ label{
 	color:#FFF;
 	font-family: 'Merienda', cursive;
 	display:inline-block;
-	width:80px;
+	width:100px;
 	margin-left:20px;
 }
 input, textarea {
@@ -93,8 +93,24 @@ button:active, .send_form:active {
 	-ie-box-shadow: 0px 0px 0px 1px #589391 inset, 0px 0px 0px 2px #65a9a7 inset, 0px 1px 0px 0px #355655, 0px 3px 0px 0px rgba(0,0,0,.15);
 	box-shadow: 0px 0px 0px 1px #589391 inset, 0px 0px 0px 2px #65a9a7 inset, 0px 1px 0px 0px #355655, 0px 3px 0px 0px rgba(0,0,0,.15);
 }
-
-
+.first-info, em{ 
+	color: #FFF;
+	font-style: italic;
+	font-size: 14px;
+	text-align: center;
+	margin-bottom: 20px;
+}
+em{
+	margin-top: 10px;
+}
+legend {
+	color:#FFF;
+	font-family: 'Merienda', cursive;
+	font-size:24px;
+	font-weight:700;
+	text-shadow:1px 1px 1px #666;
+	margin-bottom: 10px;
+}
 .mensaje {
 	text-align:center;
 	color:#FFF;
