--- a/04/Jsdiez/styles/styles.css
+++ b/04/Jsdiez/styles/styles.css
@@ -15,6 +15,7 @@ body{
 }
 #header {
 	text-align:center;
+	margin-top:20px;
 }
 #header{
 }
@@ -101,7 +102,10 @@ button:active, .send_form:active {
 	margin-bottom: 20px;
 }
 em{
-	margin-top: 10px;
+	display:block;
+	margin: 20px 0 0;
+	font-size: 11px;
+	text-align: center;
 }
 legend {
 	color:#FFF;
