--- a/04/Estefi/css/style.css
+++ b/04/Estefi/css/style.css
@@ -88,8 +88,6 @@ fieldset #submit.disabled:hover {
 	transition: all 1s ease;
 }
 
-
-
 #reset {
     display: block;
     font-size: 17px;
@@ -118,10 +116,31 @@ fieldset #submit.disabled:hover {
 	list-style-type: none;
 } 
 
+.msg-box-top h2 {
+    margin: 0;
+}
 
+.msg-box-top {
+    border: 2px dashed #FF9400;
+    font-size: 22px;
+    margin-bottom: 20px;
+    padding: 10px;
+	height: 0;
+	opacity: 0;
+	overflow: hidden;
+	-webkit-transition: all 1s ease;
+	-moz-transition: all 1s ease;
+	-ms-transition: all 1s ease;
+	-o-transition: all 1s ease;
+	transition: all 1s ease;
+}
 
-
-
-
-
+.msg-box-top li {
+    border-color: transparent #CCCCCC;
+    border-style: solid;
+    border-width: 1px;
+	display: none;
+    margin: 0 11px;
+    padding: 0 4px;
+}
 
