--- a/04/Jsdiez/styles/styles.css
+++ b/04/Jsdiez/styles/styles.css
@@ -36,6 +36,10 @@ h1 {
 	margin-top:20px;
 	padding: 20px 15px;
 }
+#content img {
+	display: block;
+	margin: 0 auto;
+}
 label{
 	color:#FFF;
 	font-family: 'Merienda', cursive;
