--- a/04/Pablo/style.css
+++ b/04/Pablo/style.css
@@ -60,8 +60,8 @@ display:block;
 input:not([type="submit"]), textarea{
     padding: 10px;
 	font-size:16px;
-    margin: 0 0 10px 0;
-    width: 353px; /* 353 + 2 + 45 = 400 */
+    margin: 0 0 2px 0;
+    width: 380px; /* 353 + 2 + 45 = 400 */
     border: 1px solid #ccc;
     -moz-border-radius: 5px;
 	font-family:'Helvetica', arial, san-serif;
@@ -74,7 +74,11 @@ input:not([type="submit"]):active,
 textarea:active,
 input:not([type="submit"]):focus, 
 textarea:focus{
-
+    background-color: #fff;
+	border:1px solid #e8c291;
+    -moz-box-shadow: 0 0 0 1px #e8c291 inset;
+    -webkit-box-shadow: 0 0 0 1px #e8c291 inset;
+    box-shadow: 0 0 0 1px #e8c291 inset;
 }
 input:not([type="submit"]){
 height: 20px;
@@ -95,14 +99,24 @@ min-height:150px;
 resize:vertical
 }
 
+input.empty {border:1px solid red}
 
+span.error {
+	display:inline-block;
+	text-align:right;
+	margin-bottom:10px;
+	color:red;
+	font-size:12px;
+	width:100%;
+}
+#showinfo { font-size:24px;}
 
-
+#showinfo span {color:#999;}
 
 /** Styling the send button **/
 
 
-input[type=submit]
+input[type="submit"]
 {		
     background-color: #ffb94b;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#fddb6f), to(#ffb94b));
@@ -161,56 +175,6 @@ input[type=submit]:active
 
 input[type=submit]::-moz-focus-inner {  border: none;}
 
-
-
-header .message{
-		 box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
-		 width: 100%;
-		 border: 1px solid;
-		 color: #fff;
-		 padding: 25px;
-		 position: fixed;
-		 position: absolute;
-		 text-shadow: 0 1px 0 #55a12c;
-		 position:absolute;
-		 opacity:0
-}
-
-header .message a.close{
-	background: url(http://cdn1.iconfinder.com/data/icons/bwpx/icons/symbol_multiplication.gif) no-repeat center;
-	position:absolute;
-	width:25px;
-	height:25px;
-	top:30%;
-	right:5%;
-	}
-header .info{
-		 background-color: #4ea5cd;
-		 border-color: #3b8eb5;
-}
-
-header .error{
-		 background-color: #de4343;
-		 border-color: #c43d3d;
-}
-		 
-.warning{
-		 background-color: #eaaf51;
-		 border-color: #d99a36;
-}
-
-header .success{
-		 background-color: #61b832;
-		 border-color: #55a12c;
-}
-
-header .message h3{
-		 margin: 0 0 5px 0;													 
-}
-
-header .message p{
-		 margin: 0;													 
-}
 
 
 
