--- a/04/Estefi/css/style.css
+++ b/04/Estefi/css/style.css
@@ -144,3 +144,32 @@ fieldset #submit.disabled:hover {
     padding: 0 4px;
 }
 
+.link-back {
+background: rgb(252,236,252); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(252,236,252,1) 0%, rgba(251,166,225,1) 50%, rgba(253,137,215,1) 51%, rgba(255,124,216,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,236,252,1)), color-stop(50%,rgba(251,166,225,1)), color-stop(51%,rgba(253,137,215,1)), color-stop(100%,rgba(255,124,216,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(252,236,252,1) 0%,rgba(251,166,225,1) 50%,rgba(253,137,215,1) 51%,rgba(255,124,216,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(252,236,252,1) 0%,rgba(251,166,225,1) 50%,rgba(253,137,215,1) 51%,rgba(255,124,216,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(252,236,252,1) 0%,rgba(251,166,225,1) 50%,rgba(253,137,215,1) 51%,rgba(255,124,216,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(252,236,252,1) 0%,rgba(251,166,225,1) 50%,rgba(253,137,215,1) 51%,rgba(255,124,216,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcecfc', endColorstr='#ff7cd8',GradientType=0 ); /* IE6-9 */
+    border-radius: 5px 5px 5px 5px;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    box-shadow: 1px 1px 2px #000000;
+    -webkit-box-shadow: 1px 1px 2px #000000;
+    padding: 5px 10px;
+    text-decoration: none;
+}
+.link-back:hover {
+background: rgb(255,124,216); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(255,124,216,1) 0%, rgba(253,137,215,1) 49%, rgba(251,166,225,1) 50%, rgba(252,236,252,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,124,216,1)), color-stop(49%,rgba(253,137,215,1)), color-stop(50%,rgba(251,166,225,1)), color-stop(100%,rgba(252,236,252,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(255,124,216,1) 0%,rgba(253,137,215,1) 49%,rgba(251,166,225,1) 50%,rgba(252,236,252,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(255,124,216,1) 0%,rgba(253,137,215,1) 49%,rgba(251,166,225,1) 50%,rgba(252,236,252,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(255,124,216,1) 0%,rgba(253,137,215,1) 49%,rgba(251,166,225,1) 50%,rgba(252,236,252,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(255,124,216,1) 0%,rgba(253,137,215,1) 49%,rgba(251,166,225,1) 50%,rgba(252,236,252,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7cd8', endColorstr='#fcecfc',GradientType=0 ); /* IE6-9 */
+    box-shadow: 1px 1px 2px #000000 inset;
+    -webkit-box-shadow: 1px 1px 2px #000000 inset;
+
+}
